# Wikipedia-Product-Analysis

./: .dockerignore  .env.docker  .env.example  .env.test  .flake8  .gitignore  DEPLOYMENT.md  DEPLOYMENT_FILES_SUMMARY.md  DEPLOYMENT_READINESS.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  project-report-prompt.md  property_test_report.json  pyproject.toml  pytest.ini  reduce_test_examples.py  reduce_test_examples_aggressive.py  requirements.txt  run_clustering_tests.py  run_fast_tests.py  run_property_tests.py  setup.py  setup_dev.py  streamlit_app.py  test_edit_history_manual.py  test_forecaster_simple.py  test_output.txt  test_referential_integrity_standalone.py  test_results_summary.md  verify_setup.py
alembic/: env.py
config/: README.md  config.yaml  development.yaml  production.yaml  staging.yaml
docs/: DOCUMENTATION_SUMMARY.md  README.md  api_documentation_guide.md  api_reference.rst  api_reference_intelligence.rst  architecture.md  check_docstrings.py  cli-usage.md  conf.py  configuration.md  docstring_examples.md  getting_started.rst  index.rst  interpretation_guide.md  methodology.rst  scheduling_guide.md  user_guides.rst
examples/: README.md  sample_business_insights_report.md
fortune500_kg/: .env.example  INSTALLATION.md  QUICK_START.md  README.md  TASK_1_SUMMARY.md  TASK_2_1_SUMMARY.md  __init__.py  analytics_engine.py  dashboard_app.py  dashboard_service.py  data_ingestion_pipeline.py  data_models.py  docker-compose.yml  error_handler.py  exceptions.py  insight_generator.py  insight_generator_backup.py  metrics_exporter.py  performance_monitor.py  predictive_model.py  pytest.ini  requirements.txt  setup.sh  verify_setup.py
pages/: 1_Wikipedia_Intelligence.py  2_Wikipedia_Product_Health.py
scripts/: README.md  check_db.py  create_tables_directly.py  deploy.sh  health_check.py  init_db.sql  manual_migration.py  migrate_data.py  run_checkpoint_test.py  setup_test_db.py  startup.py  verify_database_setup.py
src/: __init__.py
test_output/: trends_results.json  trends_results.json.meta.json
tests/: CHECKPOINT_18_RESULTS.md  (+37 more)
(+193 files in other folders)
